# ratatoskr

./: CLAUDE.md  Changelog.md
.github/: copilot-instructions.md
docs/: ADR-001-bluetooth-architecture-strategy.md  ADR-003-obex-dbus-service-discovery.md  ADR-004-apparmor-dbus-receive-permissions.md  ADR-005-shareplugin-nodisplay-issue.md  ADR-006-version-management-strategy.md  INSTALL.md  Roadmap.md  architecture.md  test_proc.txt
docs/sprint-001/: scope.md
docs/sprint-002/: apparmor-analysis.md  scope.md  summary.md  technical-doc.md
docs/sprint-003/: implementation-summary.md  installation-testing-guide.md  quick-reference.md  research-findings.md  sprint-003-plan.md
docs/sprint-004/: FINAL_REPORT.md  implementation-summary.md  investigation-checklist.md  obex-investigation.md  quick-reference.md  ratatoskr.apparmor.local  sprint-004-plan.md  testing-guide.md
docs/sprint-005/: API_ref.md
docs/sprint-006/: SharePlugin_test_report.md  journal_cropped-20260121.txt
docs/sprint-007/: SharePlugin_test_report-2.md  journal_cropped-20260123-3.txt  journal_cropped-20260123.txt  shareplugin-contenthub-fix.md
docs/sprint-008/: cleanup_summary.md  sprint_priorities.md
docs/sprint-011/: scope.md
docs/sprint-013/: scope.md
ratatoskr/: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  adapter.cpp  adapter.h  clickable.yaml  devicediscovery.cpp  devicediscovery.h  get-version.sh  main.cpp  manifest.json.in  obexagent.cpp  obexagent.h  obexagentadaptor.cpp  obexagentadaptor.h  obexd.cpp  obexd.h  ratatoskr.apparmor  ratatoskr.desktop.in  snapcraft.yaml  transfer.cpp  transfer.h
ratatoskr/plugins/: CMakeLists.txt
ratatoskr/po/: CMakeLists.txt  POTFILES.in  fr.po  it.po  nl.po  ratatoskr.petroniusniger.pot  ratatoskr.philipa.pot
ratatoskr/qml/: Main.qml
templates/: header.cpp  header_2.cpp
(+23 files in other folders)
